infra unifi repo

--- a/config.yaml
+++ b/config.yaml
@@ -5,3 +5,9 @@ this:
     - name: "github-iac"
       description: "Github IAC Repository"
       visibility: "public"
+    - name: "unifi-webhook"
+      description: "Webhook Interceptor"
+      visibility: "public"
+    - name: "unifi-webhook-infra"
+      description: "ecr repo for unifi webhook infra"
+      visibility: "public"
